feat(编辑器,目标注册模块): 为部分目标节点列表型规范内容
1.5.0  2022/5/31

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -202,6 +202,10 @@ EDITOR-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-EDIT-FINISH_REWARD-EDIT: "&7编辑"
 EDITOR-EDIT-FINISH_REWARD-EDIT-META: "&7&l[ &c✎ &7&l]"
 EDITOR-EDIT-FINISH_REWARD-EDIT-HOVER: "&c点击编辑"
+EDITOR-EDIT-FINISH_REWARD-ADD: "&7添加"
+EDITOR-EDIT-FINISH_REWARD-ADD-META: "&7&l[ &c+ &7&l]"
+EDITOR-EDIT-FINISH_REWARD-ADD-HOVER: "&c点击添加奖励模块"
+EDITOR-PLEASE-REWARD-ID: "下一行输入奖励ID"
 EDITOR-EDIT-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
 EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
 EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f内部任务失败奖励 \"&7{1}&f(&7{0}&f)&f\""
@@ -221,6 +225,7 @@ EDITOR-TARGET-LIST-NODE-BLOCK: "方块材料条目"
 EDITOR-TARGET-LIST-NODE-NEED: "所需条件"
 EDITOR-TARGET-LIST-NODE-CAUSE: "死亡原因条目"
 EDITOR-TARGET-LIST-NODE-ID: "NPC ID"
+EDITOR-PLEASE-NODE-CONTENT: "下一行输入内容"
 EDITOR-TARGET-LIST-UI-NODE: "&3&l可视化模式 &7- &f{3} \"&7{1}&f(&7{0}&f)&7 {2}&f\""
 EDITOR-TARGET-LIST-FOR-NODE: "&f\"&7{0}&f\""
 EDITOR-TARGET-NODE-META: "&7&l[ &c✎&7&l ]"
