--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -116,15 +116,15 @@ EDITOR-EDIT-QUEST-FAILURESCRIPT: "&7任务失败脚本设置"
 EDITOR-EDIT-QUEST-NOTE: "&7任务手册笔记设置"
 OPEN-ON: "开启"
 OPEN-OFF: "关闭"
-EDITOR-EDIT-QUEST-NAME-INPUT: "下一行输入任务名称"
-NUMBER-INPUT: "下一行输入数字"
+EDITOR-EDIT-QUEST-NAME-INPUT: "第一行输入任务名称"
+NUMBER-INPUT: "第一行输入数字"
 EDITOR-EDIT-QUEST-INNER-START: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 选择内部任务作为起点"
 EDITOR-EDIT-INNER-LIST: "&f\"&7{0}&f\" \"&7{1}&f\""
 EDITOR-EDIT-QUEST-START-STATE: "&7选择"
 EDITOR-EDIT-QUEST-START-STATE-META_1: "&7&l[ &7✘ &7&l]"
 EDITOR-EDIT-QUEST-START-STATE-META_2: "&7&l[ &e✔ &7&l]"
 EDITOR-EDIT-QUEST-START-STATE-HOVER: "&a点击设为起点"
-EDITOR-PLEASE-SORT: "下一行输入分类"
+EDITOR-PLEASE-SORT: "第一行输入分类"
 EDITOR-ACCEPT-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 接受任务条件"
 EDITOR-FAIL-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败条件"
 EDITOR-FAIL-SCRIPT-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败后脚本"
@@ -266,22 +266,22 @@ EDITOR-TIME-END: "结束时间"
 EDITOR-PLEASE-TIME:
   - "{0}"
   - "格式 00:00:00"
-  - "请在下一行输入"
+  - "请在第一行输入"
 EDITOR-PLEASE-WEEK:
   - "{0}"
   - "星期几"
-  - "请在下一行输入"
+  - "请在第一行输入"
 EDITOR-PLEASE-DAY:
   - "{0}"
   - "月份的几号"
-  - "请在下一行输入"
+  - "请在第一行输入"
 EDITOR-PLEASE-MONTH:
   - "{0}"
   - "几月份"
-  - "请在下一行输入"
+  - "请在第一行输入"
 EDITOR-PLEASE-TIME-CUSTOM:
   - "格式(s/m/h 数字) 如's 5'"
-  - "请在下一行输入"
+  - "请在第一行输入"
 EDITOR-PLEASE-TARGET-ID: "下一行输入任务目标ID"
 EDITOR-SELECT-TARGET: "&3&l可视化模式 &7- &f选择任务目标 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
 EDITOR-SELECT-TARGET-SEL: "&7&l[ &c➤&7&l ]"
