--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -19,10 +19,9 @@ QUEST-TIME_S: "秒"
 QUEST-TIME_MINUTE: "分"
 QUEST-TIME_HOUR: "时"
 QUEST-TIME_DAY: "天"
-QUEST-STATE_DOING: "正在进行"
-QUEST-STATE_IDLE: "闲置中"
-QUEST-STATE_FINISH: "已完成"
-QUEST-STATE_FAILURE: "失败"
+STATE-TYPE-DOING: "正在进行"
+STATE-TYPE-FINISH: "已完成"
+STATE-TYPE-FAILURE: "失败"
 QUEST-STATE_NOT_ACCEPT: "未接受"
 QUEST-ALWAYS: "不限时"
 QUEST-TIMEOUT: "&c已超时"
@@ -30,7 +29,6 @@ QUEST-ERROR_FILE: "&7&l[ &c&li &7&l]&c 任务配置不存在或缺少键值： &
 QUEST-ALREADY_ACCEPT: "&7&l[ &c&li &7&l]&c 已接受过任务，请完成任务"
 QUEST-NULL_QUEST_DATA: "&7&l[ &c&li &7&l]&c 不存在任务数据 &r{0}"
 QUEST-ERROR-ID: "&7&l[ &c&li &7&l]&c 任务ID &f\"&7{0}&f\"&c为空或已存在"
-INNER-ERROR-ID: "&7&l[ &c&li &7&l]&c 内部任务ID &f\"&7{0}&f(&7{1}&f)\"&c为空或已存在"
 MODE-TYPE-PERSONAL: "单人模式"
 MODE-TYPE-COLLABORATION: "协同模式"
 QUEST-ACCEPT-WAY-AUTO: "自动接受"
@@ -85,7 +83,7 @@ EDITOR-HOME-QUEST-LIST-HOVER: "&b查看已注册的任务列表"
 EDITOR-HOME-QUEST-ADD: "&7添加任务"
 EDITOR-HOME-QUEST-ADD-META: "&7&l[ &a+ &7&l]"
 EDITOR-HOME-QUEST-ADD-HOVER: "&a点击添加任务"
-EDITOR-PLEASE-QUEST-ID: "下一行输入任务ID"
+EDITOR-PLEASE-QUEST-ID: "第一行输入任务编号"
 EDITOR-LIST-QUEST: "&3&l可视化模式 &7- &f任务列表"
 EDITOR-LIST-QUEST-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
 EDITOR-LIST-QUEST-EDIT: "&7编辑"
@@ -102,32 +100,28 @@ EDITOR-EDIT-QUEST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\""
 EDITOR-EDIT-QUEST-META: "&7&l[ &c✎&7&l ]"
 EDITOR-EDIT-QUEST-META-HOVER: "&c点击编辑"
 EDITOR-EDIT-QUEST-NAME: "&7任务名称  &f\"&6{0}&f\""
-EDITOR-EDIT-QUEST-START: "&7内部任务起点  &f\"&6{1}&f\""
-EDITOR-EDIT-QUEST-INNER: "&7内部任务列表 "
-EDITOR-EDIT-QUEST-SORT: "&7任务手册分类  &f\"&6{2}&f\""
-EDITOR-EDIT-QUEST-MODETYPE: "&7任务成员模式  &f\"&6{3}&f\""
-EDITOR-EDIT-QUEST-MODEAMOUNT: "&7协同成员数  &f\"&6{4}&f\""
-EDITOR-EDIT-QUEST-SHAREDATA: "&7协同共享任务数据  &f\"&6{5}&f\""
-EDITOR-EDIT-QUEST-ACCEPTWAY: "&7接受任务方式  &f\"&6{6}&f\""
-EDITOR-EDIT-QUEST-MAXQUANTITY: "&7接受任务上限  &f\"&6{7}&f\""
+EDITOR-EDIT-QUEST-NOTE: "&7任务笔记设置"
+EDITOR-EDIT-QUEST-GROUPEXTENDS: "&7继承任务的任务组  &f\"&6{1}&f\""
+EDITOR-EDIT-QUEST-GROUPNUMBER: "&7任务组编号  &f\"&6{2}&f\""
+EDITOR-EDIT-QUEST-GROUPSORT: "&7任务组手册分类  &f\"&6{3}&f\""
+EDITOR-EDIT-QUEST-GROUPNOTE: "&7任务组笔记设置"
+EDITOR-EDIT-QUEST-MODETYPE: "&7任务成员模式  &f\"&6{4}&f\""
+EDITOR-EDIT-QUEST-MODEAMOUNT: "&7协同成员数  &f\"&6{5}&f\""
+EDITOR-EDIT-QUEST-SHAREDATA: "&7协同共享任务数据  &f\"&6{6}&f\""
+EDITOR-EDIT-QUEST-TIME: "&7时间组件设置"
+EDITOR-EDIT-QUEST-ACCEPTAUTO: "&7自动接受任务  &f\"&6{7}&f\""
 EDITOR-EDIT-QUEST-ACCEPTCONDITION: "&7接受任务条件设置"
-EDITOR-EDIT-QUEST-FAILURECONDITION: "&7任务失败条件设置"
-EDITOR-EDIT-QUEST-FAILURESCRIPT: "&7任务失败脚本设置"
-EDITOR-EDIT-QUEST-NOTE: "&7任务手册笔记设置"
+EDITOR-EDIT-QUEST-CONTROL: "&7控制框架设置"
+EDITOR-EDIT-QUEST-TARGET: "&7目标框架设置"
 OPEN-ON: "开启"
 OPEN-OFF: "关闭"
 EDITOR-EDIT-QUEST-NAME-INPUT: "第一行输入任务名称"
+EDITOR-PLEASE-GROUP-NUMBER: "第一行输入任务组编号"
 NUMBER-INPUT: "第一行输入数字"
-EDITOR-EDIT-QUEST-INNER-START: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 选择内部任务作为起点"
-EDITOR-EDIT-INNER-LIST: "&f\"&7{0}&f\" \"&7{1}&f\""
-EDITOR-EDIT-QUEST-START-STATE: "&7选择"
-EDITOR-EDIT-QUEST-START-STATE-META_1: "&7&l[ &7✘ &7&l]"
-EDITOR-EDIT-QUEST-START-STATE-META_2: "&7&l[ &e✔ &7&l]"
-EDITOR-EDIT-QUEST-START-STATE-HOVER: "&a点击设为起点"
 EDITOR-PLEASE-SORT: "第一行输入分类"
+EDITOR-QUEST-NOTE: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 任务笔记"
+EDITOR-GROUP-NOTE: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 任务笔记"
 EDITOR-ACCEPT-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 接受任务条件"
-EDITOR-FAIL-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败条件"
-EDITOR-FAIL-SCRIPT-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 全局任务失败后脚本"
 EDITOR-CONDITION-LIST: "&f\"&7{0}&f\""
 EDITOR-CONDITION-RETURN: "&7返回"
 EDITOR-CONDITION-RETURN-TRUE: "&7&l[ &atrue &7&l]"
@@ -140,43 +134,8 @@ EDITOR-LIST-DEL: "&7删除"
 EDITOR-LIST-DEL-META: "&7&l[ &c✘ &7&l]"
 EDITOR-LIST-DEL-HOVER: "&c点击删除"
 EDITOR-SCRIPT-LIST: "&f\"&7{0}&f\""
-EDITOR-LIST-INNER: "&3&l可视化模式 &7- &f\"&7{0}&f\" &f内部任务列表"
-EDITOR-LIST-INNER-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
-EDITOR-LIST-INNER-EDIT: "&7编辑"
-EDITOR-LIST-INNER-ADD: "&7添加内部任务"
-EDITOR-LIST-INNER-ADD-META: "&7&l[ &a+ &7&l]"
-EDITOR-LIST-INNER-ADD-HOVER: "&a点击添加内部任务"
-EDITOR-LIST-INNER-EDIT-META: "&7&l[ &6# &7&l]"
-EDITOR-PLEASE-INNER-ID: "下一行输入内部任务ID"
-EDITOR-LIST-INNER-EDIT-HOVER: "&6点击编辑 &f{2} &6内部任务"
-EDITOR-LIST-INNER-DEL: "&7删除"
-EDITOR-LIST-INNER-DEL-META: "&7&l[ &c✘ &7&l]"
-EDITOR-LIST-INNER-DEL-HOVER: "&c点击删除 &f{2} &c内部任务"
-EDITOR-EDIT-INNER: "&3&l可视化模式 &7- &f编辑内部任务 \"&7{1}&f(&7{0}&f)\""
-EDITOR-EDIT-INNER-META: "&7&l[ &c✎&7&l ]"
-EDITOR-EDIT-INNER-META-HOVER: "&c点击编辑"
-EDITOR-EDIT-INNER-NAME: "&7内部任务名称  &f\"&6{0}&f\""
-EDITOR-EDIT-INNER-TIME: "&7时间框架  &f\"&6{1}&f\""
-EDITOR-EDIT-INNER-DESC: "&7内部任务笔记设置"
-EDITOR-EDIT-INNER-TARGET: "&7任务目标设置"
-EDITOR-EDIT-INNER-REWARD: "&7任务完成奖励设置"
-EDITOR-EDIT-INNER-FAIL: "&7任务失败奖励设置"
-EDITOR-EDIT-INNER-NAME-INPUT: "下一行输入内部任务名称"
-EDITOR-EDIT-INNER-NOTE: "&3&l可视化模式 &7- &f内部任务笔记 \"&7{1}&f(&7{0}&f)\""
-EDITOR-LIST-INNER-NOTE-LIST: "&f\"&7{0}&f\""
-EDITOR-LIST-INNER-NOTE-DEL: "&7删除"
-EDITOR-LIST-INNER-NOTE-DEL-META: "&7&l[ &c✘ &7&l]"
-EDITOR-LIST-INNER-NOTE-DEL-HOVER: "&c点击删除该描述"
-EDITOR-LIST-INNER-NOTE-EDIT: "&7编辑"
-EDITOR-LIST-INNER-NOTE-EDIT-META: "&7&l[ &c✎ &7&l]"
-EDITOR-LIST-INNER-NOTE-EDIT-HOVER: "&c点击编辑该描述"
-EDITOR-LIST-INNER-NOTE-ADD: "&7添加"
-EDITOR-LIST-INNER-NOTE-ADD-META: "&7&l[ &e✎ &7&l]"
-EDITOR-LIST-INNER-NOTE-ADD-HOVER: "&e在该描述下一行添加描述"
-EDITOR-LIST-INNER-DESC-ADD: "&7添加描述"
-EDITOR-LIST-INNER-DESC-ADD-META: "&7&l[ &a✎ &7&l]"
-EDITOR-LIST-INNER-DESC-ADD-HOVER: "&a点击添加描述到首行"
-EDITOR-TARGET: "&3&l可视化模式 &7- &f内部任务目标列表 \"&7{1}&f(&7{0}&f)\""
+
+EDITOR-TARGET: "&3&l可视化模式 &7- &f任务目标列表 \"&7{0}&f\""
 EDITOR-TARGET-LIST: "&f{0}  \"&7{1}&f\""
 EDITOR-TARGET-EDIT: "&7编辑"
 EDITOR-TARGET-EDIT-META: "&7&l[ &c✎ &7&l]"
@@ -187,14 +146,10 @@ EDITOR-TARGET-DEL-HOVER: "&c点击删除"
 EDITOR-TARGET-ADD: "&7添加任务目标"
 EDITOR-TARGET-ADD-META: "&7&l[ &a+ &7&l]"
 EDITOR-TARGET-ADD-HOVER: "&a点击添加任务目标"
-EDITOR-EDIT-TARGET: "&3&l可视化模式 &7- &f任务目标 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
+EDITOR-EDIT-TARGET: "&3&l可视化模式 &7- &f任务目标 \"&7{1} &f(&7{0}&f)&f\""
 EDITOR-EDIT-TARGET-VALUE: "&f{0}: &7{1}"
 EDITOR-EDIT-TARGET-KEY: "&f{0}:"
 EDITOR-EDIT-TARGET-VALUE-LIST: "&f\"&7{0}&f\""
-EDITOR-EDIT-FINISH_REWARD: "&3&l可视化模式 &7- &f完成奖励 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
-EDITOR-EDIT-FINISH_REWARD-LIST: "&f\"&7{0}&f\""
-EDITOR-EDIT-FAIL_REWARD: "&3&l可视化模式 &7- &f内部任务失败奖励 \"&7{1}&f(&7{0}&f)&f\""
-EDITOR-EDIT-FAIL_REWARD-LIST: "&f\"&7{0}&f\""
 
 
 EDITOR-TARGET-NODE: "&7{0}  &f\"&6{1}&f\""
@@ -246,8 +201,8 @@ TIME-FRAME-MONTHLY: "&8每月&f{0}&8日&f{1}到&8每月&f{2}&8日&f{3}"
 TIME-FRAME-YEARLY: "&8每年&f{0}&8月&f{1}&8日&f{2}到&8每年&f{3}&8月&f{4}&8日&f{5}"
 TIME-FRAME-DAY: "&8每天&f{0}到&f{1}"
 
-EDITOR-EDIT-TIME: "&3&l可视化模式 &7- &f时间框架 \"&7{1}&f(&7{0}&f)\""
-EDITOR-EDIT-TIME-SELECT: "&3&l可视化模式 &7- &f时间框架 \"&7{1}&f(&7{0}&f)\" 选择时间类型"
+EDITOR-EDIT-TIME: "&3&l可视化模式 &7- &f时间组件 \"&7{0}&f\""
+EDITOR-EDIT-TIME-SELECT: "&3&l可视化模式 &7- &f时间组件 \"&7{0}&f\" 选择时间类型"
 EDITOR-EDIT-TIME-META: "&7&l[ &c✎&7&l ]"
 EDITOR-EDIT-TIME-META-HOVER: "&c点击编辑"
 EDITOR-EDIT-TIME-TYPE: "&7时间类型  &f\"&6{0}&f\""
@@ -283,10 +238,11 @@ EDITOR-PLEASE-TIME-CUSTOM:
   - "格式(s/m/h 数字) 如's 5'"
   - "请在第一行输入"
 EDITOR-PLEASE-TARGET-ID: "下一行输入任务目标ID"
-EDITOR-SELECT-TARGET: "&3&l可视化模式 &7- &f选择任务目标 \"&7{1}&f(&7{0}&f)&7 {2}&f\""
+EDITOR-SELECT-TARGET: "&3&l可视化模式 &7- &f选择目标事件 \"&7{1} &f(&7{0}&f)&f\""
 EDITOR-SELECT-TARGET-SEL: "&7&l[ &c➤&7&l ]"
 EDITOR-SELECT-TARGET-SEL-HOVER: "&a点击选择"
 EDITOR-SELECT-BREAK-BLOCK: "&f\"&7{0} &f(&7破坏方块&f)\""
+
 EDITOR-SELECT-TASK: "&f\"&7{0} &f(&7定时器&f)\""
 EDITOR-SELECT-PLACE-BLOCK: "&f\"&7{0} &f(&7放置方块&f)\""
 EDITOR-SELECT-PASS-COLLECTION-PACKET: "&f\"&7{0} &f(&7交互允许数据包实体&f)\""
@@ -304,6 +260,7 @@ EXIST-TARGET-ID: "{0}&r &6{1} &8该内部任务已有相同的任务目标ID"
 
 EDITOR-TARGET-CONDITION: "&3&l可视化模式 &7- &f编辑任务 \"&7{1}&f(&7{0}&f)&7 {2}&f\" 目标触发条件"
 
+EDITOR-CONTENT-LIST: "&f\"&7{0}&f\""
 EDITOR-LIST-ADD: "&7添加"
 EDITOR-LIST-ADD-META: "&7&l[ &e+ &7&l]"
 EDITOR-LIST-ADD-HOVER: "&e点击添加内容到首行"
