添加玩家钓鱼目标

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -161,6 +161,10 @@ EDITOR-TARGET-NODE-PACKETID: "数据包ID"
 EDITOR-TARGET-NODE-MESSAGE: "消息"
 EDITOR-TARGET-NODE-CONTENT: "内容"
 EDITOR-TARGET-NODE-ENTITY: "匹配实体"
+EDITOR-TARGET-NODE-ENTITYLIST: "实体列表"
+EDITOR-TARGET-NODE-HOOK: "钓鱼钩"
+EDITOR-TARGET-NODE-EXP: "经验"
+EDITOR-TARGET-NODE-STATE: "状态"
 EDITOR-TARGET-LIST-NODE-BLOCK: "方块材料条目"
 EDITOR-TARGET-LIST-NODE-NEED: "所需条件"
 EDITOR-TARGET-LIST-NODE-CAUSE: "死亡原因条目"
@@ -257,6 +261,7 @@ EDITOR-SELECT-PLAYER-SEND-COMMAND: "&f\"&7{0} &f(&7玩家发送命令&f)\""
 EDITOR-SELECT-PLAYER-DEATH: "&f\"&7{0} &f(&7玩家死亡&f)\""
 EDITOR-SELECT-PLAYER-JOIN-SERVER: "&f\"&7{0} &f(&7进入服务器&f)\""
 EDITOR-SELECT-PLAYER-QUIT-SERVER: "&f\"&7{0} &f(&7退出服务器&f)\""
+EDITOR-SELECT-PLAYER-FISH: "&f\"&7{0} &f(&7玩家钓鱼&f)\""
 
 EXIST-TARGET-ID: "{0}&r &6{1} &8该内部任务已有相同的任务目标ID"
 
