--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -161,11 +161,13 @@ EDITOR-TARGET-NODE-PACKETID: "数据包ID"
 EDITOR-TARGET-NODE-MESSAGE: "消息"
 EDITOR-TARGET-NODE-CONTENT: "内容"
 EDITOR-TARGET-NODE-ENTITY: "匹配实体"
-EDITOR-TARGET-NODE-ENTITYLIST: "实体列表"
-EDITOR-TARGET-NODE-HOOK: "钓鱼钩"
+EDITOR-TARGET-NODE-ENTITYLIST: "实体条目"
+EDITOR-TARGET-NODE-HOOK: "钓鱼钩条目"
 EDITOR-TARGET-NODE-EXP: "经验"
-EDITOR-TARGET-NODE-STATE: "状态"
+EDITOR-TARGET-NODE-STATE: "状态条目"
 EDITOR-TARGET-LIST-NODE-BLOCK: "方块材料条目"
+EDITOR-TARGET-LIST-NODE-ITEM: "材料"
+EDITOR-TARGET-LIST-NODE-MATRIX: "配方条目"
 EDITOR-TARGET-LIST-NODE-NEED: "所需条件"
 EDITOR-TARGET-LIST-NODE-CAUSE: "死亡原因条目"
 EDITOR-TARGET-LIST-NODE-ID: "NPC ID"
@@ -262,6 +264,7 @@ EDITOR-SELECT-PLAYER-DEATH: "&f\"&7{0} &f(&7玩家死亡&f)\""
 EDITOR-SELECT-PLAYER-JOIN-SERVER: "&f\"&7{0} &f(&7进入服务器&f)\""
 EDITOR-SELECT-PLAYER-QUIT-SERVER: "&f\"&7{0} &f(&7退出服务器&f)\""
 EDITOR-SELECT-PLAYER-FISH: "&f\"&7{0} &f(&7玩家钓鱼&f)\""
+EDITOR-SELECT-CRAFT-FISH: "&f\"&7{0} &f(&7合成物品&f)\""
 
 EXIST-TARGET-ID: "{0}&r &6{1} &8该内部任务已有相同的任务目标ID"
 
