--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -171,6 +171,7 @@ EDITOR-TARGET-LIST-NODE-MATRIX: "配方条目"
 EDITOR-TARGET-LIST-NODE-NEED: "所需条件"
 EDITOR-TARGET-LIST-NODE-CAUSE: "死亡原因条目"
 EDITOR-TARGET-LIST-NODE-ID: "NPC ID"
+EDITOR-TARGET-LIST-NODE-MOBS: "怪物编号"
 EDITOR-PLEASE-NODE-CONTENT: "下一行输入内容"
 EDITOR-TARGET-LIST-UI-NODE: "&3&l可视化模式 &7- &f{3} \"&7{1}&f(&7{0}&f)&7 {2}&f\""
 EDITOR-TARGET-LIST-FOR-NODE: "&f\"&7{0}&f\""
