feat✨: 任务编辑器

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -65,130 +65,152 @@ TAGS-LIST-FORMAT: "&f     - &7{0}"
 COMMAND-SUCCESSFUL_RELOAD: "&7&l[ &c&li &7&l]&f 已重载 &3&lQuestEngine &f配置文件"
 COMMAND-ITEM-SAVE: "&7&l[ &c&li &7&l]&f 保存了物品配置： &8{0}"
 
+EDIT-INPUT-QUEST-ID:
+  - "&f"
+  - "&c&l  i  &7请在聊天框输入任务编号"
+  - "&f"
+EDIT_UI_HOME: "任务编辑器 | 主页面"
+EDIT_UI_QUEST: "任务编辑器 | 任务"
+EDIT_UI_QUEST_LIST: "任务编辑器 | 任务列表"
+EDIT_UI_QUEST_NOTE: "任务编辑器 | 任务笔记"
+EDIT_UI_QUEST_CONTROL: "任务编辑器 | 任务控制框架列表"
+EDIT_UI_TARGET_CONTROL: "任务编辑器 | 目标控制框架列表"
+EDIT_UI_CONTROL: "任务编辑器 | 控制框架"
+EDIT_UI_TARGET_LIST: "任务编辑器 | 目标条目列表"
+EDIT_UI_TARGET: "任务编辑器 | 目标条目"
 
+EDIT_UI_ADD_QUEST:
+  - "     &8&o点击添加任务"
+  - "&f"
+EDIT_UI_LIST_QUEST:
+  - "     &8&o点击查看任务列表"
+  - "&f"
+EDIT_UI_EDIT_QUEST:
+  - "     &8&o点击编辑任务组"
+  - "&f"
 
-EDITOR-HOME: "&3&l可视化模式 &7- &f主页"
-EDITOR-HOME-QUEST-BUTTON: "&7任务编辑器"
-EDITOR-HOME-QUEST-BUTTON-HOVER: "&f点击"
-EDITOR-HOME-DIALOG-BUTTON: "&7对话编辑器"
-EDITOR-HOME-DIALOG-BUTTON-HOVER: "&f点击"
-EDITOR-HOME-QUEST: "&3&l可视化模式 &7- &f任务"
-EDITOR-HOME-QUEST-LIST: "&7任务列表"
-EDITOR-HOME-QUEST-LIST-META: "&7&l[ &b= &7&l]"
-EDITOR-HOME-QUEST-LIST-HOVER: "&b查看已注册的任务列表"
-EDITOR-HOME-QUEST-ADD: "&7添加任务"
-EDITOR-HOME-QUEST-ADD-META: "&7&l[ &a+ &7&l]"
-EDITOR-HOME-QUEST-ADD-HOVER: "&a点击添加任务"
-EDITOR-PLEASE-QUEST-ID: "第一行输入任务编号"
-EDITOR-LIST-QUEST: "&3&l可视化模式 &7- &f任务列表"
-EDITOR-LIST-QUEST-INFO: "&f\"&7{0}&f\" \"&7{1}&f\""
-EDITOR-LIST-QUEST-EDIT: "&7编辑"
-EDITOR-LIST-QUEST-EDIT-META: "&7&l[ &6# &7&l]"
-EDITOR-LIST-QUEST-EDIT-HOVER: "&6点击编辑 &f{0} &6任务"
-EDITOR-LIST-QUEST-DEL: "&7删除"
-EDITOR-LIST-QUEST-DEL-META: "&7&l[ &c✘ &7&l]"
-EDITOR-LIST-QUEST-DEL-HOVER: "&c点击删除 &f{0} &c任务"
-EDITOR-PREVIOUS-PAGE: "&7&l[ &f上一页 &7&l]"
-EDITOR-PREVIOUS-PAGE-HOVER: "&f点击"
-EDITOR-NEXT-PAGE: "&7&l[ &f下一页 &7&l]"
-EDITOR-NEXT-PAGE-HOVER: "&f点击"
-EDITOR-EDIT-QUEST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\""
-EDITOR-EDIT-QUEST-META: "&7&l[ &c✎&7&l ]"
-EDITOR-EDIT-QUEST-META-HOVER: "&c点击编辑"
-EDITOR-EDIT-QUEST-NAME: "&7任务名称  &f\"&6{0}&f\""
-EDITOR-EDIT-QUEST-NOTE: "&7任务笔记设置"
-EDITOR-EDIT-QUEST-GROUPEXTENDS: "&7继承任务的任务组  &f\"&6{1}&f\""
-EDITOR-EDIT-QUEST-GROUPNUMBER: "&7任务组编号  &f\"&6{2}&f\""
-EDITOR-EDIT-QUEST-GROUPNOTE: "&7任务组笔记设置"
-EDITOR-EDIT-QUEST-MODETYPE: "&7任务成员模式  &f\"&6{4}&f\""
-EDITOR-EDIT-QUEST-MODEAMOUNT: "&7协同成员数  &f\"&6{5}&f\""
-EDITOR-EDIT-QUEST-SHAREDATA: "&7协同共享任务数据  &f\"&6{6}&f\""
-EDITOR-EDIT-QUEST-TIME: "&7时间组件设置"
-EDITOR-EDIT-QUEST-ACCEPTAUTO: "&7自动接受任务  &f\"&6{7}&f\""
-EDITOR-EDIT-QUEST-ACCEPTCONDITION: "&7接受任务条件设置"
-EDITOR-EDIT-QUEST-CONTROL: "&7控制框架设置"
-EDITOR-EDIT-QUEST-TARGET: "&7目标框架设置"
-OPEN-ON: "开启"
-OPEN-OFF: "关闭"
-EDITOR-EDIT-QUEST-NAME-INPUT: "第一行输入任务名称"
-EDITOR-PLEASE-GROUP-NUMBER: "第一行输入任务组编号"
-NUMBER-INPUT: "第一行输入数字"
-EDITOR-QUEST-NOTE: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 任务笔记"
-EDITOR-GROUP-NOTE: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 任务笔记"
-EDITOR-ACCEPT-CONDITION-LIST: "&3&l可视化模式 &7- &f编辑任务 \"&7{0}&f\" 接受任务条件"
-EDITOR-CONDITION-LIST: "&f\"&7{0}&f\""
-EDITOR-CONDITION-RETURN: "&7返回"
-EDITOR-CONDITION-RETURN-TRUE: "&7&l[ &atrue &7&l]"
-EDITOR-CONDITION-RETURN-FALSE: "&7&l[ &cfalse &7&l]"
-EDITOR-CONDITION-RETURN-ERROR: "&7&l[ &cerror &7&l]"
-EDITOR-SCRIPT-RETURN: "&7状态"
-EDITOR-SCRIPT-RETURN-TRUE: "&7&l[ &a有效 &7&l]"
-EDITOR-SCRIPT-RETURN-ERROR: "&7&l[ &c无效 &7&l]"
-EDITOR-LIST-DEL: "&7删除"
-EDITOR-LIST-DEL-META: "&7&l[ &c✘ &7&l]"
-EDITOR-LIST-DEL-HOVER: "&c点击删除"
-EDITOR-SCRIPT-LIST: "&f\"&7{0}&f\""
+EDIT_BACK_QUEST_HOME:
+  - "     &8&o返回任务编辑器主页面"
+  - "&f"
 
-EDITOR-TARGET: "&3&l可视化模式 &7- &f任务目标列表 \"&7{0}&f\""
-EDITOR-TARGET-LIST: "&f{0}  \"&7{1}&f\""
-EDITOR-TARGET-EDIT: "&7编辑"
-EDITOR-TARGET-EDIT-META: "&7&l[ &c✎ &7&l]"
-EDITOR-TARGET-EDIT-HOVER: "&c点击编辑"
-EDITOR-TARGET-DEL: "&7删除"
-EDITOR-TARGET-DEL-META: "&7&l[ &c✘ &7&l]"
-EDITOR-TARGET-DEL-HOVER: "&c点击删除"
-EDITOR-TARGET-ADD: "&7添加任务目标"
-EDITOR-TARGET-ADD-META: "&7&l[ &a+ &7&l]"
-EDITOR-TARGET-ADD-HOVER: "&a点击添加任务目标"
-EDITOR-EDIT-TARGET: "&3&l可视化模式 &7- &f任务目标 \"&7{1} &f(&7{0}&f)&f\""
-EDITOR-EDIT-TARGET-VALUE: "&f{0}: &7{1}"
-EDITOR-EDIT-TARGET-KEY: "&f{0}:"
-EDITOR-EDIT-TARGET-VALUE-LIST: "&f\"&7{0}&f\""
+EDIT_BACK_QUEST_LIST:
+  - "     &8&o返回任务编辑器任务列表"
+  - "&f"
 
+EDIT_QUEST_RENAME:
+  - "     &f{0}"
+  - "&f"
+  - "     &8&o点击重命名任务名称"
+  - "&f"
+EDIT_QUEST_NOTE:
+  - "     &8&o设置任务笔记"
+  - "&f"
+EDIT_QUEST_ACCEPT:
+  - "     &6接受模式：&f{0}"
+  - "&f"
+  - "     &8&o设置接受模式"
+  - "&f"
+EDIT_QUEST_TIME:
+  - "     &6时间设定：&f{0}"
+  - "&f"
+  - "     &8&o设置时间框架"
+  - "&f"
+EDIT_QUEST_MODE:
+  - "     &6模式：&f{0}"
+  - "     &6成员上限：&f{1}"
+  - "     &6共享数据：&f{2}"
+  - "&f"
+  - "     &8&o设置任务成员模式"
+  - "&f"
+EDIT_QUEST_CONTROL:
+  - "     &8&o设置触发器控制框架"
+  - "&f"
+EDIT_QUEST_TARGET:
+  - "     &8&o设置任务目标框架"
+  - "&f"
 
-EDITOR-TARGET-NODE: "&7{0}  &f\"&6{1}&f\""
-EDITOR-TARGET-LIST-NODE: "&7{0}"
-EDITOR-TARGET-NODE-AMOUNT: "次数"
-EDITOR-TARGET-NODE-NUMBER: "次数"
-EDITOR-TARGET-NODE-COST: "费用"
-EDITOR-TARGET-NODE-PACKETID: "数据包ID"
-EDITOR-TARGET-NODE-MESSAGE: "消息"
-EDITOR-TARGET-NODE-CONTENT: "内容"
-EDITOR-TARGET-NODE-ENTITY: "匹配实体"
-EDITOR-TARGET-NODE-ENTITYLIST: "实体条目"
-EDITOR-TARGET-NODE-HOOK: "钓鱼钩条目"
-EDITOR-TARGET-NODE-EXP: "经验"
-EDITOR-TARGET-NODE-STATE: "状态条目"
-EDITOR-TARGET-LIST-NODE-BLOCK: "方块材料条目"
-EDITOR-TARGET-LIST-NODE-ITEM: "材料"
-EDITOR-TARGET-LIST-NODE-MATRIX: "配方条目"
-EDITOR-TARGET-LIST-NODE-NEED: "所需条件"
-EDITOR-TARGET-LIST-NODE-CAUSE: "死亡原因条目"
-EDITOR-TARGET-LIST-NODE-ID: "NPC ID"
-EDITOR-TARGET-LIST-NODE-MOBS: "怪物编号"
-EDITOR-PLEASE-NODE-CONTENT: "下一行输入内容"
-EDITOR-TARGET-LIST-UI-NODE: "&3&l可视化模式 &7- &f{3} \"&7{1}&f(&7{0}&f)&7 {2}&f\""
-EDITOR-TARGET-LIST-FOR-NODE: "&f\"&7{0}&f\""
-EDITOR-TARGET-NODE-META: "&7&l[ &c✎&7&l ]"
-EDITOR-TARGET-NODE-META-HOVER: "&c点击编辑"
-EDITOR-TARGET-NODE-BOOLEAN-HOVER: "&c点击切换"
-EDITOR-TARGET-NODE-PLAYER-STRING: "下一行输入字符"
-EDITOR-TARGET-NODE-PLAYER-INT: "下一行输入整数"
-EDITOR-TARGET-NODE-PLAYER-DOUBLE: "下一行输入小数"
+EDIT_QUEST_LIST:
+  - "     &f[[quest name]]"
+  - "&f"
+  - "     &8&o点击编辑任务"
+  - "&f"
 
-EDITOR-EDIT-TARGET-NAME: "&7条目事件  &f\"&6{0}&f\""
-EDITOR-EDIT-TARGET-PERIOD: "&7定时器滴答  &f\"&6{1}&f\""
-EDITOR-EDIT-TARGET-ASYNC: "&7异步线程  &f\"&6{2}&f\""
-EDITOR-EDIT-TARGET-CONDITION: "&7条件检查"
-EDITOR-EDIT-TARGET-META: "&7&l[ &c✎&7&l ]"
-EDITOR-EDIT-TARGET-META-HOVER: "&c点击编辑"
-EDITOR-EDIT-TARGET-BOOLEAN-META-HOVER: "&c点击切换"
-ASYNC-BOOLEAN-META-TRUE: "&f异步"
-ASYNC-BOOLEAN-META-FALSE: "&f同步"
+EDIT_BACK_QUEST_EDIT:
+  - "     &8&o返回编辑任务 &f[[quest name]]"
+  - "&f"
+EDIT_QUEST_NOTE_PREVIEW:
+  - "     &f预览任务笔记："
+  - "&f"
+  - "__List__"
+  - "&f"
 
-EDITOR-BACK: "&7返回"
-EDITOR-BACK-META: "&7&l[ &f◀ &7&l]"
-EDITOR-BACK-HOVER: "&f点击返回"
+EDIT_QUEST_NOTE_EDIT:
+  - "     &8&o编辑任务笔记内容"
+  - "&f"
+
+EDIT_CONTROL_LIST:
+  - "     &f{0}"
+  - "&f"
+  - "     &8&o点击编辑控制框架内容"
+  - "&f"
+
+EDIT_BACK_QUEST_CONTROL_LIST:
+  - "     &8&o返回任务控制框架列表 &f[[quest name]]"
+  - "&f"
+EDIT_CONTROL_SELECT:
+  - "     &6执行脚本的对象：&f{0}"
+  - "&f"
+  - "     &8&o点击选择脚本对象"
+  - "&f"
+EDIT_CONTROL_TYPE:
+  - "     &6脚本触发器：&f{0}"
+  - "&f"
+  - "     &8&o点击选择触发脚本方式"
+  - "&f"
+EDIT_CONTROL_SCRIPT:
+  - "     &6脚本："
+  - "&f"
+  - "__List__"
+  - "&f"
+  - "     &8&o左键点击编辑脚本"
+  - "     &8&o右键点击预览脚本"
+  - "&f"
+
+EDIT_TARGET_LIST:
+  - "     &f{0}"
+  - "&f"
+  - "     &8&o点击编辑目标条目"
+  - "&f"
+
+EDIT_BACK_TARGET_LIST:
+  - "     &8&o返回目标条目列表 &f[[quest name]]"
+  - "&f"
+EDIT_TARGET_EVENT:
+    - "     &6事件：&f{0}"
+    - "&f"
+    - "     &8&o点击设置事件条目"
+    - "&f"
+EDIT_TARGET_NOTE:
+  - "     &6预览目标笔记："
+  - "&f"
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑目标笔记"
+  - "&f"
+EDIT_TARGET_TRIGGER:
+  - "     &8&o设置触发器控制框架"
+  - "&f"
+
+SELECT_TYPE_SELF: "对自己"
+SELECT_TYPE_TEAM: "对自己"
+SELECT_TYPE_ALL: "对自己"
+
+QUEUE_TYPE_ACCEPT: "接受时"
+QUEUE_TYPE_FINISH: "完成时"
+QUEUE_TYPE_FAIL: "失败时"
+QUEUE_TYPE_QUIT: "放弃时"
+QUEUE_TYPE_RESET: "重置时"
+QUEUE_TYPE_TRACK: "追踪时"
 
 TIME-FRAME-WEEK-1: "一"
 TIME-FRAME-WEEK-2: "二"
@@ -202,76 +224,5 @@ TIME-FRAME-MONTHLY: "&8每月&f{0}&8日&f{1}到&8每月&f{2}&8日&f{3}"
 TIME-FRAME-YEARLY: "&8每年&f{0}&8月&f{1}&8日&f{2}到&8每年&f{3}&8月&f{4}&8日&f{5}"
 TIME-FRAME-DAY: "&8每天&f{0}到&f{1}"
 
-EDITOR-EDIT-TIME: "&3&l可视化模式 &7- &f时间组件 \"&7{0}&f\""
-EDITOR-EDIT-TIME-SELECT: "&3&l可视化模式 &7- &f时间组件 \"&7{0}&f\" 选择时间类型"
-EDITOR-EDIT-TIME-META: "&7&l[ &c✎&7&l ]"
-EDITOR-EDIT-TIME-META-HOVER: "&c点击编辑"
-EDITOR-EDIT-TIME-TYPE: "&7时间类型  &f\"&6{0}&f\""
-EDITOR-EDIT-TIME-DUR: "&7时间段  &f\"&6{0}&f\""
-EDITOR-EDIT-TIME-TYPE-DAY: "DAY(每天一次)"
-EDITOR-EDIT-TIME-TYPE-WEEKLY: "DAY(每周一次)"
-EDITOR-EDIT-TIME-TYPE-MONTHLY: "DAY(每月一次)"
-EDITOR-EDIT-TIME-TYPE-YEARLY: "DAY(每年一次)"
-EDITOR-EDIT-TIME-TYPE-ALWAYS: "ALWAYS(无时限)"
-EDITOR-EDIT-TIME-TYPE-CUSTOM: "CUSTOM(时间段)"
-EDITOR-EDIT-TIME-SELECT_1: "&7&l[ &7✘ &7&l]"
-EDITOR-EDIT-TIME-SELECT_2: "&7&l[ &e✔ &7&l]"
-EDITOR-EDIT-TIME-SELECT-HOVER: "&a点击设为该时间类型"
-EDITOR-TIME-FROM: "起始时间"
-EDITOR-TIME-END: "结束时间"
-EDITOR-PLEASE-TIME:
-  - "{0}"
-  - "格式 00:00:00"
-  - "请在第一行输入"
-EDITOR-PLEASE-WEEK:
-  - "{0}"
-  - "星期几"
-  - "请在第一行输入"
-EDITOR-PLEASE-DAY:
-  - "{0}"
-  - "月份的几号"
-  - "请在第一行输入"
-EDITOR-PLEASE-MONTH:
-  - "{0}"
-  - "几月份"
-  - "请在第一行输入"
-EDITOR-PLEASE-TIME-CUSTOM:
-  - "格式(s/m/h 数字) 如's 5'"
-  - "请在第一行输入"
-EDITOR-PLEASE-TARGET-ID: "下一行输入任务目标ID"
-EDITOR-SELECT-TARGET: "&3&l可视化模式 &7- &f选择目标事件 \"&7{1} &f(&7{0}&f)&f\""
-EDITOR-SELECT-TARGET-SEL: "&7&l[ &c➤&7&l ]"
-EDITOR-SELECT-TARGET-SEL-HOVER: "&a点击选择"
-EDITOR-SELECT-BREAK-BLOCK: "&f\"&7{0} &f(&7破坏方块&f)\""
-
-EDITOR-SELECT-TASK: "&f\"&7{0} &f(&7定时器&f)\""
-EDITOR-SELECT-PLACE-BLOCK: "&f\"&7{0} &f(&7放置方块&f)\""
-EDITOR-SELECT-PASS-COLLECTION-PACKET: "&f\"&7{0} &f(&7交互允许数据包实体&f)\""
-EDITOR-SELECT-ENCHANT-ITEM: "&f\"&7{0} &f(&7附魔物品&f)\""
-EDITOR-SELECT-LEFT-NPC: "&f\"&7{0} &f(&7左键CitizensNPC&f)\""
-EDITOR-SELECT-RIGHT-NPC: "&f\"&7{0} &f(&7右键CitizensNPC&f)\""
-EDITOR-SELECT-LEFT-ADY: "&f\"&7{0} &f(&7左键AdyeshachNPC&f)\""
-EDITOR-SELECT-RIGHT-ADY: "&f\"&7{0} &f(&7右键AdyeshachNPC&f)\""
-EDITOR-SELECT-PLAYER-CHAT: "&f\"&7{0} &f(&7玩家聊天&f)\""
-EDITOR-SELECT-PLAYER-KILL-ENTITY: "&f\"&7{0} &f(&7玩家击杀实体&f)\""
-EDITOR-SELECT-PLAYER-SEND-COMMAND: "&f\"&7{0} &f(&7玩家发送命令&f)\""
-EDITOR-SELECT-PLAYER-DEATH: "&f\"&7{0} &f(&7玩家死亡&f)\""
-EDITOR-SELECT-PLAYER-JOIN-SERVER: "&f\"&7{0} &f(&7进入服务器&f)\""
-EDITOR-SELECT-PLAYER-QUIT-SERVER: "&f\"&7{0} &f(&7退出服务器&f)\""
-EDITOR-SELECT-PLAYER-FISH: "&f\"&7{0} &f(&7玩家钓鱼&f)\""
-EDITOR-SELECT-CRAFT-FISH: "&f\"&7{0} &f(&7合成物品&f)\""
-EDITOR-SELECT-PLAYER-RESPAWN: "&f\"&7{0} &f(&7玩家重生&f)\""
-EDITOR-SELECT-PLAYER-KILL-MYTHICMOBS: "&f\"&7{0} &f(&7玩家击杀MythicMobs&f)\""
-
-EXIST-TARGET-ID: "{0}&r &6{1} &8该任务已有相同的任务目标ID"
-
-EDITOR-TARGET-CONDITION: "&3&l可视化模式 &7- &f编辑任务 \"&7{1}&f(&7{0}&f)&7 {2}&f\" 目标触发条件"
-
-EDITOR-CONTENT-LIST: "&f\"&7{0}&f\""
-EDITOR-LIST-ADD: "&7添加"
-EDITOR-LIST-ADD-META: "&7&l[ &e+ &7&l]"
-EDITOR-LIST-ADD-HOVER: "&e点击添加内容到首行"
-EDITOR-LIST-NEXT-ADD: "&7添加"
-EDITOR-LIST-NEXT-ADD-META: "&7&l[ &e+ &7&l]"
-EDITOR-LIST-NEXT-ADD-HOVER: "&e点击添加内容到下一行"
-EDITOR-PLEASE-EVAL: "下一行输入语句"
+OPEN-ON: "开启"
+OPEN-OFF: "关闭"
