feat✨: 任务编辑器

--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -75,6 +75,7 @@ EDIT_BOOK_QUEST_ACCEPT_CONDITION: "编辑任务-任务接受条件"
 EDIT_BOOK_QUEST_MODE: "编辑任务-任务模式"
 EDIT_BOOK_QUEST_CONTROL: "编辑任务-触发器控制框架"
 EDIT_BOOK_QUEST_TARGET: "编辑任务-目标编号"
+EDIT_BOOK_EVENT_TASK_ID: "编辑任务-定时器事件编号"
 
 PREVIOUS_PAGE: "&a&l上一页"
 NEXT_PAGE: "&a&l下一页"
@@ -155,6 +156,9 @@ EDIT_INPUT_TIME_CUSTOM:
   - "s 10 代表10秒"
   - "m 5 代表5分钟"
   - "h 6 代表6小时"
+
+EDIT_INPUT_EVENT_TASK_ID:
+  - "下一行输入定时器编号"
 
 EDIT_UI_HOME: "任务编辑器 | 主页面"
 EDIT_UI_QUEST: "任务编辑器 | 任务"
@@ -503,6 +507,12 @@ EDIT_EVENT_NODE_COST:
   - "&f"
   - "     &8&o点击编辑"
   - "&f"
+EDIT_EVENT_NODE_ITEM:
+  - "     &6物品："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
 EDIT_EVENT_NODE_MESSAGE:
   - "     &6消息："
   - "__List__"
@@ -517,6 +527,64 @@ EDIT_EVENT_NODE_CONTENT:
   - "&f"
 EDIT_EVENT_NODE_ENTITY:
   - "     &6实体类型：&f{0}"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_CONDITION:
+  - "     &6条件："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_CHECK:
+  - "     &6检查条件次数：&f{0}"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_BLOCK:
+  - "     &6方块："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_ID:
+  - "     &6NPC ID："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_CAUSE:
+  - "     &6死亡原因："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_ENTITYLIST:
+  - "     &6捕获到的实体类型："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_HOOK:
+  - "     &6钓鱼钩住的实体类型："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_STATE:
+  - "     &6钓鱼状态："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_EXP:
+  - "     &6所获经验(整数)：&f{0}"
+  - "&f"
+  - "     &8&o点击编辑"
+  - "&f"
+EDIT_EVENT_NODE_MATRIX:
+  - "     &6合成配方："
+  - "__List__"
   - "&f"
   - "     &8&o点击编辑"
   - "&f"
@@ -567,9 +635,15 @@ TARGET_SELECT_PASS_COLLECTION_PACKET: "&7{0} &f(&7交互允许数据包实体&f)
 TARGET_SELECT_ENCHANT_ITEM: "&7{0} &f(&7附魔物品&f)"
 TARGET_SELECT_LEFT_NPC: "&7{0} &f(&7左键CitizensNPC&f)"
 TARGET_SELECT_RIGHT_NPC: "&7{0} &f(&7右键CitizensNPC&f)"
+TARGET_SELECT_LEFT_ADY: "&7{0} &f(&7左键Adyeshach&f)"
+TARGET_SELECT_RIGHT_ADY: "&7{0} &f(&7右键Adyeshach&f)"
 TARGET_SELECT_PLAYER_CHAT: "&7{0} &f(&7玩家聊天&f)"
 TARGET_SELECT_PLAYER_KILL_ENTITY: "&7{0} &f(&7玩家击杀实体&f)"
+TARGET_SELECT_PLAYER_KILL_MYTHICMOBS: "&7{0} &f(&7玩家击杀MythicMobs实体&f)"
 TARGET_SELECT_PLAYER_SEND_COMMAND: "&7{0} &f(&7玩家发送命令&f)"
 TARGET_SELECT_PLAYER_DEATH: "&7{0} &f(&7玩家死亡&f)"
+TARGET_SELECT_PLAYER_RESPAWN: "&7{0} &f(&7玩家重生&f)"
+TARGET_SELECT_PLAYER_FISH: "&7{0} &f(&7玩家钓鱼&f)"
+TARGET_SELECT_CRAFT_ITEM: "&7{0} &f(&7合成物品&f)"
 TARGET_SELECT_PLAYER_JOIN_SERVER: "&7{0} &f(&7进入服务器&f)"
 TARGET_SELECT_PLAYER_QUIT_SERVER: "&7{0} &f(&7退出服务器&f)"
