--- a/src/main/resources/lang/zh_CN.yml
+++ b/src/main/resources/lang/zh_CN.yml
@@ -6,7 +6,6 @@ LOADER-TIME_COST: "{0}&r 所有配置载入完成，耗时 &8{1}ms"
 LOADER-NOT_INSTALLED-PLIB: "{0}&c 启用外部数据包模式，但未安装插件： &rProtocolLib"
 
 
-DIALOG-ERROR-FILE: "&7&l[ &c&li &7&l]&c 对话配置不存在或缺少键值： &r{0}"
 DIALOG-NO_FILES: "{0}&r &6dialog &8文件夹&c不存在，&8开始创建 &6dialog &8文件夹"
 DIALOG-EMPTY_CONTENT: "{0}&r &6{1} &c没有内容或标准错误"
 DIALOG-EXIST_DIALOG_ID: "{0}&r &6{1} &8已有相同已注册的对话ID"
@@ -606,6 +605,19 @@ EDIT_EVENT_NODE_MATRIX:
   - "&f"
   - "     &8&o点击编辑&f(&c多行支持&f)"
   - "&f"
+EDIT_EVENT_NODE_DIALOG:
+  - "     &6对话编号："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑&f(&c多行支持&f)"
+  - "&f"
+EDIT_EVENT_NODE_REPLY:
+  - "     &6回复编号："
+  - "__List__"
+  - "&f"
+  - "     &8&o点击编辑&f(&c多行支持&f)"
+  - "&f"
+
 EDIT_EVENT_TASK:
   - "     &6定时器：&f{0}"
   - "&f"
@@ -686,3 +698,5 @@ TARGET_SELECT_PLAYER_FISH: "&7{0} &f(&7玩家钓鱼&f)"
 TARGET_SELECT_CRAFT_ITEM: "&7{0} &f(&7合成物品&f)"
 TARGET_SELECT_PLAYER_JOIN_SERVER: "&7{0} &f(&7进入服务器&f)"
 TARGET_SELECT_PLAYER_QUIT_SERVER: "&7{0} &f(&7退出服务器&f)"
+TARGET_SELECT_PLAYER_DIALOG: "&7{0} &f(&7进行对话&f)"
+TARGET_SELECT_PLAYER_REPLY: "&7{0} &f(&7对话回复选择&f)"
